# MultipleInt

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
benchmark/: CMakeLists.txt
benchmark/include/: bench_targets.hpp  util.hpp
benchmark/source/: maxelem.cpp  maxred.cpp  promred.cpp  sumred.cpp  xpy.cpp
cmake/: prelude.cmake  variables.cmake
include/multipleint/: mi.hpp  milimits.hpp  mitraits.hpp  miutility.hpp
scripts/: bandwidth.py  base.py  big-bench.sh  big-bench_maxelem.sh  big-bench_maxred.sh  big-bench_promred.sh  big-bench_sumred.sh  big-bench_xpy.sh  format.sh  memory.py  mystyle.mplstyle  plot-benchmarks.sh  plot-benchmarks_maxelem.sh  plot-benchmarks_maxred.sh  plot-benchmarks_promred.sh  plot-benchmarks_sumred.sh  plot-benchmarks_xpy.sh  plot.py
test/: CMakeLists.txt
test/source/: CMakeLists.txt  bms.cpp  decoding.cpp  downcasting.cpp  encoding.cpp  lims.cpp  max_error.cpp  max_red_alt.cpp  multipleint_test.cpp  operations.cpp  sum_red_alt.cpp  traits.cpp  upcasting.cpp
